@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.34 2003/05/24 17:27:10 salo Exp $
+# $NetBSD: Makefile,v 1.35 2003/05/25 07:20:52 dan Exp $
 #
 
 .include "../../graphics/mplayer-share/Makefile.common"
 
 PKGNAME=	mplayer-${MPLAYER_PKG_VERSION}
-PKGREVISION=	2
+PKGREVISION=	3
 COMMENT=	Software only MPEG-1/2/4 video decoder
 
 USE_BUILDLINK2=		# defined
